# ClearlyBot

./: Cargo.toml
src/: main.rs
src/commands/: clearly.rs  mod.rs
