[package]
name = "clearlybot"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Abderrahmane INeedSleep <hk101dk@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.18.0"
anyhow = "1.0.71"
serenity = { version = "0.11.5", default-features = false, features = ["cache", "framework", "standard_framework", "rustls_backend", "builder"] }
shuttle-secrets = "0.18.0"
shuttle-serenity = "0.18.0"
tokio = "1.28.2"
tracing = "0.1.37"
chrono = "0.4.26"
circular-buffer = "0.1.1"
strsim = "0.10.0"
serde = "1.0.164"
serde_json = "1.0.96"
